fixed underlined css and home button spacing.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,9 +71,15 @@ select {
 .navbar h1 {
   color: #422ba8;
 }
+a:link { text-decoration: none; }
+a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
+
 .navbar .nav-links {
   display: flex;
   align-items: center;
+  text-decoration: none;
 }
 .navbar .links,
 .navbar .auth-links {
@@ -148,7 +154,7 @@ select {
   display: flex;
   align-content: center;
   margin-top: 70px;
-  margin-left: 700px;
+  margin-left: 7px;
   background: #422ba8;
   color: #fff;
   border: 0;
